deployment/simple/402_statefulset-midpoint.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: midpoint
  namespace: midpoint-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: midpoint-node
  template:
    metadata:
      labels:
        app: midpoint-node
    spec:
      containers:
        - name: midpoint
          image: 'evolveum/midpoint:4.8.1-alpine'
          ports:
            - name: gui
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: midpoint-home
              mountPath: /opt/midpoint/var
          imagePullPolicy: IfNotPresent          
  serviceName: midpoint
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: midpoint-home
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 128Mi
        volumeMode: Filesystem
