deployment/simple/202_service-midpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: midpoint
  namespace: midpoint-deployment
spec:
  ports:
    - name: gui
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: midpoint-node 
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
